# learning_rust

./: .env  Cargo.toml
src/: lib.rs  main.rs
src/example/: actix.rs
src/functions/: func.rs  func2.rs  mod.rs
