[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.7", features = ["attributes"]}
sqlx = { version = "0.6.3", features = [ "runtime-async-std-native-tls", "postgres" ] }
dotenv = "0.15"
actix-web = "4"
serde_json = "1.0.96"
serde="1.0.164"
